updated home page

--- a/index.html
+++ b/index.html
@@ -11,9 +11,14 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="header">
-        <h1>CANVAS PLAYGROUND</h1>
-    </div>
+    <nav>
+        <div class="logo">
+          <img src="img/logo.png" alt="Logo">
+        </div>
+        <div class="name">
+          Canvas Playground
+        </div>
+      </nav>
 
     <div class="main">
         <div class="card1">
