--- a/pages/random_shapes.html
+++ b/pages/random_shapes.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Random Shapes</title>
-    <link rel="stylesheet" href="random_shapes.css"> 
+    <link rel="stylesheet" href="random_shapes.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
   </head>
   <body>
     <canvas>
     </canvas>
+    <div class="home">
+      <a href="../index.html"><i class="fa fa-home" style="font-size:50px;"></i></a>
+    </div>
+
     <div class="shapes">
       <div id="circle" class="shape-button" onclick="handleButtonClick('circle')">Circle</div>
       <div id="rectangle" class="shape-button" onclick="handleButtonClick('rectangle')">Rectangle</div>
