refactor card ui

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Teko:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -25,14 +26,16 @@
             <!-- New Card -->
             <div class="card_container">
                 <div class="card1">
-                    <img src="img/1.png" alt="Avatar" style="width:100%">
-                    <h2>Random Shapes</h2>
-                    <div class="container"> 
-                        <div class="parent_container">
-                            <a class="play-button" href="pages/random_shapes.html"></a>
-                        </div>
-                        <p>Interact with the randomly generated shape of different sizes</p> 
+                    <div class="card-image">
+                        <img src="img/1.png" alt="Avatar">
                     </div>
+                    <div class="card-content">
+                        <h2>Random Shapes</h2>
+                        <p>Interact with the randomly generated shape of different sizes</p>
+                    </div>
+                    <a href="pages/random_shapes.html">
+                        <span class="link"></span>
+                    </a>
                 </div>
             </div>
 
